refactor (simplify generic usage) + fix bug with displaying checkmate